trying no background icon

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
   <div class="container">
 
     
-      <a class="navbar-brand" href="/"><img src="/img/icon.ico" alt="Cimarron"></a>
+      <a class="navbar-brand" href="/"><img src="/img/cimarron-logo-no-background.png" alt="Cimarron"></a>
       
       <button type="button" class="navbar-toggler" data-toggle="collapse"
               data-target="#navbar" aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation">
@@ -288,7 +288,7 @@ background-color: #666;
 
 
 background-image:
-linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1)), 
+linear-gradient(rgba(0, 0, 0, 0.05), rgba(0, 0, 0, 0.05)), 
 url('/img/headers/hero-background.jpg');
 
 ;">
