change title in hero

--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@ url('/img/headers/hero-background.jpg');
   <div class="container">
 
     <h1 class="hero-title" itemprop="headline">
-      Academic
+      Cimarrón
     </h1>
 
     
