--- a/index.html
+++ b/index.html
@@ -424,7 +424,7 @@ url('/img/headers/hero-background.jpg');
     <div id="profile">
 
       
-      <img class="portrait" src="/img/icon.png" itemprop="image" alt="Avatar">
+      <img class="portrait" src="/img/cimarron-logo-no-background.png" itemprop="image" alt="Avatar">
       
 
       <div class="portrait-title">
