--- a/project/visualización-de-datos-con-altair/index.html
+++ b/project/visualización-de-datos-con-altair/index.html
@@ -599,7 +599,7 @@
 
 <div class="media author-card" itemscope itemtype="http://schema.org/Person">
   
-  <img class="portrait mr-3" src="/img/icon.png" itemprop="image" alt="Avatar">
+  <img class="portrait mr-3" src="/img/cimarron-logo-no-background.png" itemprop="image" alt="Avatar">
   
   <div class="media-body">
     <h5 class="card-title" itemprop="name"><a href="/">Cimarrón</a></h5>
