--- a/404.html
+++ b/404.html
@@ -114,7 +114,7 @@
   
   
     
-  <meta property="og:image" content="https://cimarron.io/img/icon.png">
+  <meta property="og:image" content="https://cimarron.io/img/icon.ico">
   <meta property="og:locale" content="en-us">
   
   
