--- a/404.html
+++ b/404.html
@@ -15,7 +15,7 @@
   
     
   
-  <meta name="description" content="Cimarrón is a group of creative and skilled individuals looking to solve every day problems in the most efficient and creative way using technology.">
+  <meta name="description" content="A group of creative and skilled individuals.">
 
   
   <link rel="alternate" hreflang="en-us" href="">
@@ -110,7 +110,7 @@
   <meta property="og:site_name" content="Cimarron">
   <meta property="og:url" content="">
   <meta property="og:title" content="404 Page not found | Cimarron">
-  <meta property="og:description" content="Cimarrón is a group of creative and skilled individuals looking to solve every day problems in the most efficient and creative way using technology.">
+  <meta property="og:description" content="A group of creative and skilled individuals.">
   
   
     
