--- a/project/index.html
+++ b/project/index.html
@@ -17,7 +17,7 @@
   
     
   
-  <meta name="description" content="Cimarrón is a group of creative and skilled individuals looking to solve every day problems in the most efficient and creative way using technology.">
+  <meta name="description" content="A group of creative and skilled individuals.">
 
   
   <link rel="alternate" hreflang="en-us" href="https://cimarron.io/project/">
@@ -112,7 +112,7 @@
   <meta property="og:site_name" content="Cimarron">
   <meta property="og:url" content="https://cimarron.io/project/">
   <meta property="og:title" content="Projects | Cimarron">
-  <meta property="og:description" content="Cimarrón is a group of creative and skilled individuals looking to solve every day problems in the most efficient and creative way using technology.">
+  <meta property="og:description" content="A group of creative and skilled individuals.">
   
   
     
