--- a/publication/index.html
+++ b/publication/index.html
@@ -15,7 +15,7 @@
   
     
   
-  <meta name="description" content="Cimarrón is a group of creative and skilled individuals looking to solve every day problems in the most efficient and creative way using technology.">
+  <meta name="description" content="A group of creative and skilled individuals.">
 
   
   <link rel="alternate" hreflang="en-us" href="https://cimarron.io/publication/">
@@ -110,7 +110,7 @@
   <meta property="og:site_name" content="Cimarron">
   <meta property="og:url" content="https://cimarron.io/publication/">
   <meta property="og:title" content="Publications | Cimarron">
-  <meta property="og:description" content="Cimarrón is a group of creative and skilled individuals looking to solve every day problems in the most efficient and creative way using technology.">
+  <meta property="og:description" content="A group of creative and skilled individuals.">
   
   
     
