--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ permalink: /
       <p class="lead">Cimarrón is a group of creative and skilled individuals looking to solve every day problems in the most efficient and creative way using technology.</p>
       <p class="lead">We believe technology has the potential to empower anyone regardless of one’s status. We focus our efforts in creating high-quality open-sourced data and technology products.</p>
       <hr class="my-4">
-      <p><small>This site is a collaborative project by <a href="https://www.cimarron.io">Cimarrón IO</a>. <br>Want to contribute? <a href="https://github.com/CodeandoMexico/awesome-civic-tech">Learn how</a>.</small></p>
+      <p><small>This site is a collaborative project by <a href="https://www.cimarron.io">Cimarrón IO</a>. <br>Want to contribute? <a href="https://github.com/cimarron-io/cimarron-io.github.io">Learn how</a>.</small></p>
     </div>
   </div>
 </div>
