--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ permalink: /
 <div class="jumbotron jumbotron-fluid text-dark">
   <div class="container">
     <div class="container">
-      <h1 class="display-4">¡Welcome!</h1>
+      <h1 class="display-4">Welcome!</h1>
       <p class="lead">Cimarrón is a group of creative and skilled individuals looking to solve every day problems in the most efficient and creative way using technology.</p>
       <p class="lead">We believe technology has the potential to empower anyone regardless of one’s status. We focus our efforts in creating high-quality open-sourced data and technology products.</p>
       <hr class="my-4">
