--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@ permalink: /
 <div class="jumbotron jumbotron-fluid text-dark">
   <div class="container">
     <div class="container">
-      <h1 class="display-4">Welcome!</h1>
-      <p class="lead">Cimarrón is a group of creative and skilled individuals looking to solve every day problems in the most efficient and creative way using technology.</p>
-      <p class="lead">We believe technology has the potential to empower anyone regardless of one’s status. We focus our efforts in creating high-quality open-sourced data and technology products.</p>
+      <h1 class="display-4">¡Hola! 👋🏼</h1>
+      <p class="lead">My name is Sergio Sánchez Zavala but I go by Chekos (/che/ like Guevara, /kos/ like 'costly') and I hate non-reproducible "science".</p>
+      <p class="lead">This is a curated list of publicly available tools, resources, projects, and code I’ve used throughout my career as a public policy researcher, data visualization analyst, and overall social science nerd.</p>
       <hr class="my-4">
       <p><small>This site is a collaborative project by <a href="https://www.cimarron.io">Cimarrón IO</a>. <br>Want to contribute? <a href="https://github.com/cimarron-io/cimarron-io.github.io">Learn how</a>.</small></p>
     </div>
