--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ description: "Imaginemos cosas chingonas."
     <div class="container">
       <h1 class="display-4">¡Hola! 👋🏼</h1>
       <p class="lead">My name is Sergio Sánchez Zavala but I go by Chekos (/che/ like Guevara, /kos/ like 'costly') and I hate non-reproducible "science".</p>
-      <p class="lead">This is a curated list of publicly available tools, resources, projects, and code I’ve used throughout my career as a public policy researcher, data visualization analyst, and overall social science nerd.</p>
+      <p class="lead">This is a curated list of publicly available tools, resources, projects, and code I’ve used throughout my career as a public policy researcher, data visualization analyst, and overall social science nerd to make my own work more reproducible and transparent.</p>
       <hr class="my-4">
       <p><small>This site is a collaborative project by <a href="https://www.cimarron.io">Cimarrón IO</a>. <br>Want to contribute? <a href="https://github.com/cimarron-io/cimarron-io.github.io">Learn how</a>.</small></p>
     </div>
