--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ description: "Imaginemos cosas chingonas."
     <div class="container">
       <h1 class="display-4">¡Hola! 👋🏼</h1>
       <p class="lead">My name is Sergio Sánchez Zavala but I go by Chekos (/che/ like Guevara, /kos/ like 'costly') and I hate non-reproducible "science".</p>
-      <p class="lead">This is a curated list of publicly available tools, resources, projects, and code I’ve used throughout my career as a public policy researcher, data visualization analyst, and overall social science nerd to make my own work more reproducible and transparent.</p>
+      <p class="lead">This section of <a href="https://cimarron.io/">cimarron.io</a> is a collection of <b>datasettes</b>, interactive websites + APIs, I've put together for personal or professional use.</p>
       <hr class="my-4">
       <p><small>This site is a collaborative project by <a href="https://www.cimarron.io">Cimarrón IO</a>. <br>Want to contribute? <a href="https://github.com/cimarron-io/cimarron-io.github.io">Learn how</a>.</small></p>
     </div>
@@ -19,7 +19,7 @@ description: "Imaginemos cosas chingonas."
 <section class="mt-4 mb-5">
     
   <div class="container mb-4">
-      <h1 class="font-weight-bold title">Explore projects</h1>    
+      <h1 class="font-weight-bold title">Explore datasettes</h1>    
       <div class="row">
       {% include menu-categories.html %}
       </div>
