update landing page

--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@ description: "Imaginemos cosas chingonas."
 <div class="jumbotron jumbotron-fluid text-dark">
   <div class="container">
     <div class="container">
-      <h1 class="display-4">¡Hola! 👋🏼</h1>
-      <p class="lead">My name is Sergio Sánchez Zavala but I go by Chekos (/che/ like Guevara, /kos/ like 'costly') and I hate non-reproducible "science".</p>
+      <h5><del class="text-muted"">Cash</del> Data Rules Everything Around Me</h5>
+      <h1>Cimarrón IO is a knowledge hub.</h1>
       <p class="lead">This section of <a href="https://cimarron.io/">cimarron.io</a> is a collection of <b>datasettes</b>, interactive websites + APIs, I've put together for personal or professional use.</p>
       <hr class="my-4">
-      <p><small>This site is a collaborative project by <a href="https://www.cimarron.io">Cimarrón IO</a>. <br>Want to contribute? <a href="https://github.com/cimarron-io/cimarron-io.github.io">Learn how</a>.</small></p>
+      <p><small>This site is a project by <a href="https://soyserg.io">Chekos</a>. <br>Want to contribute? <a href="https://github.com/cimarron-io/cimarron-io.github.io">Learn how</a>.</small></p>
     </div>
   </div>
 </div>
